Fixed home screen layout on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -70,3 +70,36 @@
   max-width: 600px !important;
   max-height: 375px !important;
 }
+
+@media (max-width: 768px) {
+  .logoContainer {
+    height: 120px; /* Adjust height as necessary */
+  }
+
+  .logoContainer img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .layoutContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .infoContainer {
+    width: 95%;
+    margin: 10px auto;
+    padding: 15px;
+  }
+
+  .carouselItem {
+    width: 70vw; /* Adjust the width to be less than the viewport width */
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+
+  .homeContainer, .welcomeMessage, .instructions {
+    font-size: 1rem; /* Adjust the font size for smaller screens */
+  }
+}
+
